<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.5</version>
		<relativePath /> <!--lookupparentfromrepository-->
	</parent>
	<groupId>com.jojo.javalin.api</groupId>
	<artifactId>avaje-javalin</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>avaje-javalin-template</name>
	<description>Demo project for Javalin</description>
	<properties>
		<java.version>20</java.version>
		<avaje.inject.version>9.0</avaje.inject.version>
		<avaje.jsonb.version>1.4</avaje.jsonb.version>
		<avaje.config.version>3.1</avaje.config.version>
		<avaje.http.version>1.34</avaje.http.version>
		<javalin.version>5.4.2</javalin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>2.2.7</version>
		</dependency>
		<dependency>
			<groupId>io.javalin</groupId>
			<artifactId>javalin</artifactId>
			<version>${javalin.version}</version>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>7.2</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb</artifactId>
			<version>${avaje.jsonb.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject</artifactId>
			<version>${avaje.inject.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-config</artifactId>
			<version>${avaje.config.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-api</artifactId>
			<version>${avaje.http.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-client</artifactId>
			<version>${avaje.http.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject-test</artifactId>
			<version>${avaje.inject.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock-jre8-standalone</artifactId>
			<version>2.35.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.javalin</groupId>
			<artifactId>javalin-testtools</artifactId>
			<version>${javalin.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Annotation processors -->
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject-generator</artifactId>
			<version>${avaje.inject.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb-generator</artifactId>
			<version>${avaje.jsonb.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-javalin-generator</artifactId>
			<version>${avaje.http.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-client-generator</artifactId>
			<version>${avaje.http.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>error_prone_core</artifactId>
			<version>2.15.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- format code-->
			<plugin>
				<groupId>com.spotify.fmt</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.19</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Add Compiler args for loom and errorprone -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>-XDcompilePolicy=simple</arg>
						<arg>-Xplugin:ErrorProne</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>io.avaje</groupId>
				<artifactId>avaje-inject-maven-plugin</artifactId>
				<version>1.0</version>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>provides</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Move openAPI to resources-->
			<plugin>
				<groupId>io.avaje</groupId>
				<artifactId>openapi-maven-plugin</artifactId>
				<version>1.0</version>
				<executions>
					<execution>
						<id>main</id>
						<phase>process-classes</phase>
						<goals>
							<goal>openapi</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--Enforce
			SLF4J logging-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>de.skuzzle.enforcer</groupId>
						<artifactId>restrict-imports-enforcer-rule</artifactId>
						<version>2.0.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>enforce</id>
						<configuration>
							<rules>
								<banDuplicatePomDependencyVersions />
							</rules>
						</configuration>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.9</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin> 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine} --enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>